tests/should_fail/let_destructure_arity_1_on_3.nv
module test
// let destructure: 1-element pattern on 3-element tuple
let (a) = (1, 2, 3)
